# netshtorm_like_game

./: .gitignore  CMakeLists.txt  build.bat  build.sh  state.md  vcpkg.json
docs/: graphics-notes.md  journal.md  testing.md
scripts/: cleanup_assets.py  generate_assets.py  test_client.py  test_controller.py  test_game.py
src/: game.cpp  game.h  main.cpp  windows_sanitize.h
src/assets/: asset_manager.cpp  asset_manager.h  sound_bank.cpp  sound_bank.h  sprite_sheet.cpp  sprite_sheet.h
src/camera/: game_camera.cpp  game_camera.h  isometric_camera.cpp  isometric_camera.h  minimap_camera.cpp  minimap_camera.h
src/core/: config.h  random.cpp  random.h  state_machine.cpp  state_machine.h  timer.cpp  timer.h  types.h
src/input/: input_actions.h  input_handler.cpp  input_handler.h
src/map/: bridge.cpp  bridge.h  bridge_placer.cpp  bridge_placer.h  geyser.cpp  geyser.h  island.cpp  island.h  island_generator.cpp  island_generator.h  map.cpp  map.h  map_renderer.cpp  map_renderer.h
src/systems/: particle_system.cpp  particle_system.h
src/test/: test_controller.cpp  test_controller.h
src/ui/: hud.cpp  hud.h  menu.cpp  menu.h  minimap.cpp  minimap.h
tests/: raylib_stub.h  test_camera.cpp  test_map.cpp  test_types.cpp
